fixed banners on tablet and mobile

--- a/app/styles/blocks/carousel.less
+++ b/app/styles/blocks/carousel.less
@@ -32,6 +32,11 @@
       }
     }
   }
+  @media @from-mobile {
+    .slick-slide img {
+      width: 100%;
+    }
+  }
 
   .item {
     max-width: 360px;
