--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -54,3 +54,19 @@ form.subscribe-form {
 a.subscribe {
 	text-decoration: underline;
 }
+
+@media only screen and (max-width: 800px){
+	.slick-slide img {
+		width: 100%;
+	}
+	.banner-wrap .item .thumb {
+		height: 600px;
+	}
+	.banner-wrap .subscribe{
+		display: block;
+		margin-top: 15px;
+	}
+	form.subscribe-form input.form-control{
+		width: 85%
+	}
+}
